<resources>
    <string name="app_name">ToDo</string>
    <string name="raheem" translatable="false">Raheem</string>

    <!-- TodoCallback -->
    <string name="predefined_todo_name">Stay organized and efficient!</string>

    <!-- TodoList -->
    <string name="tasks">Tasks</string>
    <string name="deleted_successfully">Task deleted successfully</string>
    <string name="undo">Undo</string>
    <string name="search">Search…</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="hide_completed">Hide completed</string>
    <string name="delete_all_completed">Delete all completed tasks</string>
    <string name="delete_all_tasks">Delete all tasks</string>
    <string name="about_me">About me</string>
    <string name="share">Share</string>
    <string name="share_app">Want to boost your productivity? Try ToDo -> %1$s</string>
    <string name="choose">Choose</string>
    <string name="rate">Rate</string>
    <string name="source_code">Source code</string>
    <string name="support">Connect us</string>
    <string name="change_language">Change language</string>
    <string name="empty_tasks_message">Tasks you add appear here</string>

    <!-- TodoAdd -->
    <string name="new_task">New task</string>
    <string name="task_name">Task name</string>
    <string name="important_task">Important task</string>
    <string name="error_name">Name cannot be empty</string>

    <!-- TodoEdit -->
    <string name="edit_task">Edit task</string>
    <string name="x_created_timestamp">Created on: %1$s</string>

    <!-- TodoDialog -->
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="wanna_delete_completed">Do you want to delete all completed tasks?</string>
    <string name="wanna_delete_all">Do you want to delete all tasks?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Support -->
    <string name="need_help">Need help?</string>
    <string name="connect_us">Connect us</string>
    <string name="connect_us_body">Let us know if you\'re facing a problem or have suggestions to improve the app. We care about our users!</string>
    <string name="via_telegram">via Telegram</string>
    <string name="via_email">via Email</string>
    <string name="improvement">Suggestions for ToDo</string>

    <!-- Content Descriptions -->
    <string name="cd_task_important">Important task</string>
    <string name="cd_task_add">Add task</string>
    <string name="cd_back_button">Go back</string>
    <string name="cd_done_button">Save task</string>
    <string name="cd_more_vertical">More actions</string>
    <string name="cd_app_icon">App icon</string>
    <string name="cd_company_logo">Company logo</string>
    <string name="cd_sort">Sort tasks</string>
    <string name="cd_selected_sort">Tasks are sorted by %1$s</string>
    <string name="cd_search_button">Search tasks</string>
    <string name="cd_hide_completed">Hide completed tasks</string>
    <string name="cd_user_support">User support</string>
    <string name="cd_via_telegram">Connect us via Telegram</string>
    <string name="cd_via_email">Connect us via Email</string>

    <!-- Shortcut -->
    <string name="shortcut_add_todo_short_label">Add ToDo</string>
    <string name="shortcut_add_todo_long_label">Quickly add ToDo by pressing this action</string>
    <string name="shortcut_add_todo_disabled_message">Quick add is currently disabled</string>
</resources>