<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_sort_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_by_date" />
        </menu>
    </item>

    <item
        android:id="@+id/action_hide"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_completed"
        android:title="@string/delete_all_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_me"
        android:title="@string/about_me"
        app:showAsAction="never" />
</menu>